trying to solve bug, not sure why the container wont align horizontal

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -113,17 +113,13 @@ body {
     justify-content: space-around;
 }
 .weather__forecast__item {
-    border: 2px solid white;
-    border-radius: 40px;
-    background-color:#53adb8;
-    padding: 5px 10px;
-    margin: 10px;
+    background-color: gray;
+    border-radius: 10px;
+    margin: 0 10px 10px;
+    padding: 30px 5px 20px;
     box-sizing: border-box;
-    align-items: center;
-    width: 80px;
-    height: 80px;
-    float: left;
-    display: flex;
-    flex-shrink: 0;
+    min-width: 150px;
+    width: calc(20% - 20px);
+    flex-grow: 1;
 }
 
